# Voxlab-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: deploy.yml
analyzer/: Dockerfile  main.py  pyproject.toml
analyzer/analyzers/: __init__.py  download_model.py  gibberish.py  nlp.py  readability.py  requirements.py  scoring.py  structure.py  text.py  vocabulary.py
cmd/api/: main.go
database/: Dockerfile.postgres  init.sql  seed.sql
database/migrations/: 001_lesson_exercise_many_to_many.sql  20260710_add_completed_exercises_to_user_progress.sql  20260710_create_user_progress_table.sql  20260711_drop_user_progresses_table.sql
docs/: PRODUCTION.md  docs.go  swagger.json  swagger.yaml
docs/es/: index.html  openapi-es.json
docs/md/: ANALYZER.md  ARCHITECTURE.md  DEPLOYMENT.md  ENV_VARS.md  scoring.md
internal/analyzer/: client.go
internal/config/: config.go
internal/database/: migrate_jsonb.go  postgres.go  redis.go  seed.go
internal/http/: router.go
internal/models/: exercise.go  exercise_attempt.go  lesson_exercise.go  progress.go  reaction.go  requirement_catalog.go  track.go  user.go
internal/repositories/: community_repository.go  educational_repository.go  exercise_attempt_repository.go  exercise_repository.go  lesson_exercise_repository.go  lesson_repository.go  module_repository.go  progress_repository.go  track_repository.go  user_repository.go
internal/server/: routes.go  server.go
nginx/: nginx.conf
(+58 files in other folders)
