[project]
name = "voxlab-analyzer"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "spacy>=3.8",
    "textstat>=0.7",
    "fastembed>=0.4.0",
]

[project.scripts]
download-model = "analyzers.download_model:main"

[dependency-groups]
dev = []

[tool.uv]
package = true
